# innowise_laboratory

./: .gitignore
lecture_1/: main.py  pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: main.py  operations.sql  school.db
lecture_5/book_api/: books.db  connect.py  main.py  models.py  operations.py
